# OOP

lab1/: CMakeLists.txt
lab1/src/: TurkishNumber.cpp  TurkishNumber.h  main.cpp
lab1/tests/: test_turkish.cpp
lab2/: CMakeLists.txt
lab2/src/: Five.cpp  Five.h  main.cpp
lab2/tests/: test_five.cpp
lab3/: CMakeLists.txt
lab3/src/: Figure.h  FigureArray.cpp  FigureArray.h  Point.h  QuadUtils.h  Rectangle.cpp  Rectangle.h  Rhombus.cpp  Rhombus.h  TotalArea.cpp  TotalArea.h  Trapezoid.cpp  Trapezoid.h  main.cpp
lab3/tests/: test_figures.cpp
lab4/: CMakeLists.txt
lab4/src/: Array.h  Concepts.h  Figure.h  Point.h  Rectangle.h  Square.h  TotalArea.h  Trapezoid.h  main.cpp
lab4/tests/: test_figures.cpp
lab5/: CMakeLists.txt
lab5/src/: PmrQueue.h  SimpleStruct.h  TotalArea.h  VectorMemoryResource.h  main.cpp
lab5/tests/: test_queue.cpp
lab6/: CMakeLists.txt
lab6/src/: Battle.cpp  Battle.h  Dragon.cpp  Dragon.h  Dungeon.cpp  Dungeon.h  Frog.cpp  Frog.h  Knight.cpp  Knight.h  NPC.cpp  NPC.h  NPCFactory.cpp  NPCFactory.h  Observer.cpp  Observer.h  Visitor.h  main.cpp
lab6/tests/: test_battle.cpp
lab7/: CMakeLists.txt
lab7/src/: Game.cpp  Game.h
lab7/tests/: test_game.cpp
